# llama-cpp-ane

./: PLAN.md  README.md  STATUS.md  test-ane-backend.sh
docs/: build.md
ggml/: CMakeLists.txt
ggml/include/: ggml-ane.h
ggml/src/: CMakeLists.txt  ggml-backend-reg.cpp  ggml-backend.cpp
ggml/src/ggml-ane/: CMakeLists.txt  ggml-ane-buffer.mm  ggml-ane-device.mm  ggml-ane-impl.h  ggml-ane-mil.mm  ggml-ane-ops.cpp  ggml-ane-runtime.mm  ggml-ane.cpp  ggml-ane.mm  test-ane-matmul.cpp  test-ggml-ane.cpp
src/: llama-context.cpp  llama-model-loader.cpp  llama-model.cpp  llama.cpp
